# pgopr

./: AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  rustfmt.sh
.github/workflows/: ci.yml
doc/: DEVELOPERS.md  GETTING_STARTED.md  build_manual.sh
doc/manual/en/: 00-frontpage.md  01-introduction.md  02-installation.md  03-quickstart.md  71-git.md  76-test.md  97-acknowledgement.md  98-licenses.md  99-references.md
doc/tutorial/: 01_install_operator.md  02_provision.md  03_database_access.md  04_retire.md  05_uninstall.md  06_completion.md  07_generate.md
src/: cluster.rs  crd.rs  finalizer.rs  k8s.rs  main.rs  manager.rs  persistent.rs  pgexporter.rs  pgmoneta.rs  primary.rs  replica.rs  services.rs  workload.rs
src/cluster/: cleanup.rs  config.rs  status.rs  topology.rs
src/handlers/: cluster.rs  generate.rs  mod.rs  operator.rs
test/: check.sh
