# Eclipse Public License - v 2.0
#
#     THE ACCOMPANYING PROGRAM IS PROVIDED UNDER THE TERMS OF THIS ECLIPSE
#     PUBLIC LICENSE ("AGREEMENT"). ANY USE, REPRODUCTION OR DISTRIBUTION
#     OF THE PROGRAM CONSTITUTES RECIPIENT'S ACCEPTANCE OF THIS AGREEMENT.

[package]
name = "pgopr"
version = "0.2.0"
authors = ["Jesper Pedersen <jesperpedersen.db@gmail.com>", "Cristian Guarino <cristian.guarino.j@gmail.com>", "Nick Boyadjian <nboyadjian95@gmail.com>"]
edition = "2024"
license = "Eclipse Public License 2.0"
description = "PostgreSQL operator for Kubernetes"

[dependencies]
tokio = { version = "1", features = ["full"] }
kube = { version = "2.0", default-features = true, features = ["client", "derive", "runtime"] }
k8s-openapi = { version = "0.26", default-features = true, features = ["v1_34"] }
clap = { version = "4.5", default-features = false, features = ["std", "cargo", "help"] }
clap_complete = { version = "4.5" }
directories = { version = "6.0" }
figment = { version = "0.10", features = ["env", "toml"] }
futures = { version = "0.3" }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"] }
log4rs = { version = "1.4" }
schemars = { version = "1.1" }
serde = { version = "1.0" }
serde_derive = { version = "1.0" }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9" }
thiserror = { version = "2.0" }
toml = { version = "0.9" }
